--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "axios": "^1.6.8",
     "boostrap": "^2.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.3",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.23.1",
